# sol5

./: .env.example  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  netlify.toml
app/: next.config.js  package-lock.json  package.json
app/components/: Wallet.tsx
app/lib/: anchor.ts  config.ts
app/pages/: [asset].tsx  _app.tsx  index.tsx
app/styles/: globals.css
contracts/betting/: Anchor.toml  package.json
contracts/betting/programs/betting/: Cargo.toml
contracts/betting/programs/betting/src/: errors.rs  events.rs  lib.rs  state.rs
contracts/betting/programs/betting/src/instructions/: claim.rs  close_epoch.rs  create_epoch.rs  initialize.rs  lock_epoch.rs  mod.rs  pause.rs  place_bet.rs  set_asset_feed.rs
contracts/betting/tests/: betting.spec.ts
scripts/: airdrop-devnet.ts  create-epoch.ts  deploy-program.ts  deploy.ts  health-check.js  logs-subscribe.ts  package.json  set-feeds.ts  settle.ts
