[package]
name = "betting"
version = "0.1.0"
description = "Solana pari-mutuel betting protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# NOTE: In production, add pyth-sdk-solana for proper Pyth price parsing
# pyth-sdk-solana = "0.10.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
spl-token = "4.0.0"
